# GUA

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  GOVERNANCE.md  LAUNCH_POST.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  demo_improvement.bat  demo_improvement.sh  demo_network.bat  demo_network.sh  demo_resilience.bat  demo_resilience.sh  full_demo.py  make_smart_gua.bat  make_smart_gua.sh  pyproject.toml  requirements.txt  run_node.bat  run_node.sh  self_train.bat  self_train.sh  start_gua.bat  start_gua.sh  test_buttons.bat  test_buttons.sh  train_gua.bat  verify.bat  verify.py  verify.sh
.github/: PULL_REQUEST_TEMPLATE.md
docs/: DISTRIBUTED_DESIGN.md  GOOD_FIRST_ISSUES.md  README.md  THREAT_MODEL.md  node-client-spec.md
governance/: ruleset.yaml  sign_ruleset.py  verify_ruleset.py
network/: README.md  blobstore.py  chat_demo.py  demo.py  improvement.py  improvement_demo.py  inference_worker.py  net_demo.py  node_daemon.py  registry.py  replication.py  replication_demo.py  scheduler.py  service.py  transport.py  worker.py
node-client/: README.md  gua_node.py
safety/: README.md  audit_log.py  llm_judge.py  policy_engine.py  sandbox.py
tests/: test_backend.py  test_federated.py  test_governance.py  test_improvement.py  test_inference.py  test_llm_judge.py  test_node.py  test_node_daemon.py  test_policy.py  test_promote.py  test_replication.py  test_sandbox.py  test_scheduler.py  test_self_improve.py  test_service.py  test_store.py  test_tools.py  test_transport.py
(+34 files in other folders)
